Fixed nav spacing on mobile

--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -13,6 +13,8 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
         transition: transform 0.3s, box-shadow 0.3s
         max-width: 70%
+        @media #{$mobile}
+            max-width: 80%
 
     > .link > .selfie
 
