--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -1,7 +1,7 @@
 .page
     margin-top: $header-margin-top
     @media #{$mobile}
-        margin-top: 60px
+        margin-top: 50px
     > h1
         text-align: center
         margin-bottom: 1rem
